# magazine-crawler

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  main.sh  pyproject.toml  requirements.txt  setup.cfg  test_main.py
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  main.yml  test.yml
config/: docker-compose-example.env
