[tool.poetry]
name = "magazine-crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "magazine_crawler"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.0"
fake-useragent = "^1.1.3"
requests = "^2.28.2"
tweepy = "^4.14.0"
urllib3 = "^1.26.15"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.1.1"
types-beautifulsoup4 = "^4.12.0.1"
types-requests = "^2.29.0.0"
types-urllib3 = "^1.26.25.10"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# 公式ドキュメント
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format

# ライン行数はデフォルトから変更する場合はコメントアウト
# line-length = 88

# デフォルトに追加したいフォーマット対象外指定ファイルやディレクトリ
extend-exclude = '''
(
      \.git
    | migrations/  # 自動生成されたDB migrationファイル
)
'''


[tool.isort]
# blackと共存して使う設定
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"

# .gitignoreファイルで指定されているファイルを除外
skip_gitignore = true

# デフォルトに追加したいフォーマット対象外指定ファイルやディレクトリ
extend_skip_glob = ["**/migrations/*"]  # 自動生成されたDB migrationファイル


[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml

# strictモードを有効化
strict = true

[[tool.mypy.overrides]]
module = [
    "tweepy",
    "fake_useragent"
]
ignore_missing_imports = true
