[tool.poetry]
name = "magazine-crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "magazine_crawler"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.13.4"
fake-useragent = "^2.2.0"
requests = "^2.32.4"
tweepy = "^4.15.0"
urllib3 = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
types-beautifulsoup4 = "*"
types-requests = "*"
types-urllib3 = "*"
pytest = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# 公式ドキュメント
# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format

# ライン行数はデフォルトから変更する場合はコメントアウト
# line-length = 88

# デフォルトに追加したいフォーマット対象外指定ファイルやディレクトリ
extend-exclude = '''
(
      \.git
    | migrations/  # 自動生成されたDB migrationファイル
)
'''


[tool.isort]
# blackと共存して使う設定
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"

# .gitignoreファイルで指定されているファイルを除外
skip_gitignore = true

# デフォルトに追加したいフォーマット対象外指定ファイルやディレクトリ
extend_skip_glob = ["**/migrations/*"]  # 自動生成されたDB migrationファイル


[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml

# strictモードを有効化
strict = true

[[tool.mypy.overrides]]
module = [
    "tweepy",
    "fake_useragent"
]
ignore_missing_imports = true
